--- a/clase-12/views/layouts/main.handlebars
+++ b/clase-12/views/layouts/main.handlebars
@@ -5,15 +5,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="/socket.io/socket.io.js"></script>
     <title>Productos</title>
 </head>
 
 <body>
     {{{body}}}
-    <script src="../../class/main.js"></script>
+    <script>
+
+        const socket = io.connect();
+
+        function addMessage(e) {
+            const message = {
+                author: document.getElementById("username").value,
+                message: document.getElementById("text").value,
+                fyh: new Date().toDateString()
+            }
+
+            socket.emit("new-message", message);
+
+            document.getElementById("text").value = ""
+            document.getElementById("text").focus()
+
+            return false
+        }
+
+        function rendermensajes(data) {
+            const html = data.map((elem, index) => {
+                return (`<div>
+        <strong style="color:blue;">${elem.author}</strong>
+        <em style="color:brown;">[${elem.fyh}]</em>
+        <em style="color:green;">${elem.message}</em>
+        </div>`)
+            }).join(" ")
+
+            document.getElementById("messages").innerHTML = html
+        }
+
+        function renderproductos(data) {
+            console.log("Este es el producto" , data)
+            const html = data.map((elem, index) => {
+                return (`
+      <tr>
+        <td>
+          ${elem.nombre}
+        </td>
+        <td>
+          ${elem.precio}
+        </td>
+        <td>
+          <img src="${elem.nombre}">
+        </td>
+      </tr>`)
+            })
+
+            document.getElementById("tabla").innerHTML += html
+        }
+
+        socket.on("messages", function (data) { rendermensajes(data) })
+        socket.on("productos", function (data) { renderproductos(data) })
+    </script>
 </body>
 
 </html>
