--- a/clase-12/views/productos.handlebars
+++ b/clase-12/views/productos.handlebars
@@ -1,12 +1,42 @@
 <div class="container-fluid mt-3">
-    <h1>Mi App Chat</h1>
-    <hr>
 
+  <h1 style="color:blue;">Ingrese un producto</h1>
+  <br>
+  <form action="/productos" method="post">
+    <div class="form-group">
+      <label for="nombre"><b>Nombre</b></label>
+      <input id="nombre" class="form-control" type="text" name="nombre">
+    </div>
+    <div class="form-group">
+      <label for="precio"><b>Precio</b></label>
+      <input id="precio" class="form-control" type="number" name="precio">
+    </div>
+    <div class="form-group">
+      <label for="imagen"><b>Imágen</b></label>
+      <input id="imagen" class="form-control" type="text" name="imagen">
+    </div>
+    <button class="btn btn-success mt-3 mb-5">Ingresar</button>
+  </form>
+
+  <div class="table-responsive">
+    <table class="table table-dark" id="tabla">
+      <tr style="color: yellow;">
+        <th>Nombre</th>
+        <th>Precio</th>
+        <th>Imagen</th>
+      </tr>
+    </table>
+  </div>
+
+  <h2 style="color:blue;">Centro de mensajes</h2>
+  <hr>
+
+  <input type="email" id="username" class="form-control my-2 mr-2" placeholder="Tu email">
+
+  <form class="form-inline" onsubmit="return addMessage(this)" autocomplete="off">
     <div id="messages"></div>
-
-    <form class="form-inline" onsubmit="return addMessage(this)" autocomplete="off">
-      <input type="text" id="username" class="form-control my-2 mr-2" placeholder="Tu Nombre">
-      <input type="text" id="text" class="form-control my-2 mr-2" placeholder="Cuéntanos algo...">
-      <input class="btn btn-primary my-2" type="submit" value="Enviar!">
-    </form>
+    <hr>
+    <input type="text" id="text" class="form-control my-2 mr-2" placeholder="Cuéntanos algo...">
+    <input class="btn btn-primary my-2" type="submit" value="Enviar!">
+  </form>
 </div>
