--- a/clase-12/views/productos.handlebars
+++ b/clase-12/views/productos.handlebars
@@ -2,7 +2,8 @@
 
   <h1 style="color:blue;">Ingrese un producto</h1>
   <br>
-  <form action="/productos" method="post">
+  
+  <form class="form-inline" onsubmit="return addProducto(this)" autocomplete="off">
     <div class="form-group">
       <label for="nombre"><b>Nombre</b></label>
       <input id="nombre" class="form-control" type="text" name="nombre">
@@ -15,16 +16,18 @@
       <label for="imagen"><b>Imágen</b></label>
       <input id="imagen" class="form-control" type="text" name="imagen">
     </div>
-    <button class="btn btn-success mt-3 mb-5">Ingresar</button>
+    <input class="btn btn-primary my-2" type="submit" value="Agregar!">
   </form>
 
   <div class="table-responsive">
-    <table class="table table-dark" id="tabla">
+    <table class="table table-dark">
       <tr style="color: yellow;">
         <th>Nombre</th>
         <th>Precio</th>
         <th>Imagen</th>
       </tr>
+    </table>
+    <table class="table table-dark" id="tabla">
     </table>
   </div>
 
